@@ -12,6 +12,7 @@ Nagios Change Log
 * Privileges will now only attempted be dropped if started as root user
 * Embedded Perl fixes (to reduce memory leaks)
 * Sample CGI config file fixes
+* Added $HOSTCHECKTYPE$ and $SERVICECHECKTYPE$ macros
 
 
 
